fixed tab-panes and aligned the current weather with the forecast

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,3 +8,7 @@
 .app-location {
   margin-top: 1%;
 }
+
+.forecast {
+  margin-left: 1%;
+}
